Fixed app.js not matching spacing, fixed image size

--- a/PollBuddy-Server/frontend/src/pages/homepage/homepage.scss
+++ b/PollBuddy-Server/frontend/src/pages/homepage/homepage.scss
@@ -72,5 +72,9 @@
   font-family: monospace;
   font-size: 5vh;
   max-width: 40vw;
-  top: 0%;
+  top: 0;
+}
+
+.logo {
+  height: 200px;
 }
